# Decspec

./: .env.example  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  PRD.md  PRODUCT_DASHBOARD.md  PROPOSAL_SPECGRAPH_DATABASE.md  ROADMAP.md  bootstrap.py  main.py  migration_plan.md  pyproject.toml  snapshot.py  temp_task.md
.agent/: settings.local.json
.agent/workflows/: devspec-collect-req.md  devspec-monitor.md
.claude/: settings.local.json
.claude/commands/: devspec-collect-req.md  devspec-monitor.md  devspec-write-prd.md
.gemini/commands/: devspec-collect-req.toml  devspec-monitor.toml  devspec-write-prd.toml
.specgraph/: AGENT.md  AGENTS.md  product.yaml
.specgraph/.runtime/: specgraph.db  test_debug.db
.specgraph/components/: comp_cli.yaml  comp_cli_app.yaml  comp_cli_context.yaml  comp_cli_debug_logger.yaml  comp_cli_init.yaml  comp_cli_monitor.yaml  comp_cli_sync.yaml  comp_cli_validate_prd.yaml  comp_config_manager.yaml  comp_consistency_monitor.yaml  comp_context_assembler.yaml  (+19 more)
devspec/: __init__.py  main.py
devspec.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
openspec/: AGENTS.md
origin_req/: origin_req.md
oringin_req/: origin_req.md  req_claude.md  req_gemini.md  standerd_req.md
oringin_requirements/: req_chatgpt_v1.md  req_claude_v1.md  req_claude_v2.md  req_gemini.md  req_gemini_v2.md
templates/: base.html  design.html  design_detail.html  error.html  hierarchy.html  home.html  node_detail.html  relation.html  relation_index.html  search.html  substrate_detail.html
(+105 files in other folders)
